testsuite/poke.pkl/format-diag-8.pk
/* { dg-do compile } */

format ("%f64o", 1U); /* { dg-error "" } */
